[package]
name = "rcli"
version = "0.1.0"
authors = ["EricZzz"]
edition = "2021"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.7.4", features = ["http2", "query", "tracing"] }
anyhow = "1.0.95"
base64 = "0.22.1"
blake3 = "1.6.0"
clap = { version = "4.5.24", features = ["derive"] }
csv = "1.3.1"
ed25519-dalek = { version = "2.1.1", features = ["rand_core"] }
rand = "0.8.5"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.138"
serde_yaml = "0.9.34"
toml = "0.8.20"
zxcvbn = "3.1.0"
tokio = { version = "1.36.0", features = [
    "rt",
    "rt-multi-thread",
    "macros",
    "net",
    "fs",
] }
tower-http = { version = "0.5.2", features = [
    "compression-full",
    "cors",
    "trace",
    "fs",
] }
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
tracing = "0.1.40"
